# bazel-vscode-java-bridge

./: .gitignore  README.md
.github/workflows/: ci.yml
bazel-jdt-bridge/: Cargo.toml
bazel-jdt-bridge/crates/bazel-aspect/src/: ide_info.rs  text_proto.rs
bazel-jdt-bridge/crates/bazel-cache/: Cargo.toml
bazel-jdt-bridge/crates/bazel-cache/src/: lib.rs  redb_store.rs
bazel-jdt-bridge/crates/bazel-graph/src/: classpath.rs  graph.rs  lib.rs
bazel-jdt-bridge/crates/bazel-jdt-core/: Cargo.toml
bazel-jdt-bridge/crates/bazel-jdt-core/src/: aspect.rs  change_detector.rs  jni_exports.rs  state.rs  watcher.rs
bazel-jdt-bridge/crates/bazel-jdt-core/src/aspects/: cc_info.bzl  intellij_info_impl_bundled.bzl  python_info.bzl
bazel-jdt-bridge/crates/bazel-parser/: Cargo.toml
bazel-jdt-bridge/crates/bazel-parser/src/: lib.rs  model.rs  parser.rs
bazel-jdt-bridge/crates/bazel-query/: Cargo.toml
bazel-jdt-bridge/crates/bazel-query/src/: command.rs  lib.rs  output.rs
bazel-jdt-bridge/java-bridge/: bnd.bnd  pom.xml
bazel-jdt-bridge/java-bridge/src/main/java/com/bazel/jdt/: BazelActivator.java  BazelBridge.java  BazelBuildSupport.java  BazelClasspathContainer.java  BazelClasspathContainerInitializer.java  BazelClasspathManager.java  BazelCommandHandler.java  BazelProjectCreator.java  BazelProjectImporter.java  BazelProjectView.java  BazelRuntimeClasspathEntryResolver.java  JDTUtilsPatcher.java  LabelUtils.java  NativeLoader.java  PlatformDetector.java  PowerMockHelper.java  PowerMockRunnerPatcher.java  SourceRootUtils.java  TargetProjectMapping.java
bazel-jdt-bridge/java-bridge/src/main/resources/: plugin.xml
bazel-jdt-bridge/java-bridge/src/test/java/com/bazel/jdt/: BazelClasspathContainerTest.java  BazelProjectImporterTest.java  BazelProjectViewTest.java  JDTUtilsPatcherTest.java  NativeLoaderTest.java  OsgiBundleConsistencyTest.java  PowerMockHelperTest.java  PowerMockRunnerPatcherTest.java
bazel-jdt-bridge/scripts/: build-for-debug.sh  create-release-branch.sh  package-extension.sh
bazel-jdt-bridge/tests/e2e/: runTests.ts  tsconfig.json
bazel-jdt-bridge/tests/e2e/suite/: activation.test.ts  commands.test.ts  completion.test.ts  helper.ts  index.ts  sync.test.ts
bazel-jdt-bridge/vscode-extension/: package-lock.json  package.json  tsconfig.json
bazel-jdt-bridge/vscode-extension/scripts/: build-tests.mjs
bazel-jdt-bridge/vscode-extension/src/: bazelproject.ts  commands.ts  config.ts  debugAdapter.ts  extension.ts  importWizard.ts  statusBar.ts
docs/: PowerMock-Design-Summary.md  weaving-hook-npe-fix.md
examples/: README.md
examples/maven-deps-project/: BUILD.bazel  MODULE.bazel  WORKSPACE  bazel-bin  bazel-maven-deps-project  bazel-out  bazel-testlogs
examples/maven-deps-project/app/: BUILD.bazel
examples/maven-deps-project/app/src/main/java/com/example/app/: Application.java
examples/maven-deps-project/service/: BUILD.bazel
examples/maven-deps-project/service/src/main/java/com/example/service/: UserService.java
examples/maven-deps-project/tests/: BUILD.bazel
examples/maven-deps-project/tests/src/test/java/com/example/utils/: StringUtilsTest.java
examples/maven-deps-project/utils/: BUILD.bazel
examples/maven-deps-project/utils/src/main/java/com/example/utils/: StringUtils.java
examples/multi-module-project/: MODULE.bazel  WORKSPACE  bazel-bin  bazel-multi-module-project  bazel-out  bazel-testlogs
examples/multi-module-project/api/: BUILD.bazel
examples/multi-module-project/api/src/main/java/com/example/api/: DataModel.java  UserService.java
examples/multi-module-project/core/: BUILD.bazel
examples/multi-module-project/core/src/main/java/com/example/core/: DataProcessor.java  UserServiceImpl.java
examples/multi-module-project/core/src/main/resources/: config.properties
examples/multi-module-project/integration-tests/: BUILD.bazel
examples/multi-module-project/integration-tests/src/test/java/com/example/integration/: DataProcessorTest.java  UserServiceImplTest.java
examples/multi-module-project/server/: BUILD.bazel
examples/multi-module-project/server/src/main/java/com/example/server/: ServerMain.java
examples/powermock-repro-project/: .bazelproject  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE
examples/powermock-repro-project/lib/: BUILD.bazel
examples/powermock-repro-project/lib/src/main/java/com/example/lib/: ConfigService.java
examples/powermock-repro-project/tests/: BUILD.bazel
examples/powermock-repro-project/tests/src/test/java/com/example/lib/: ConfigServicePowerMockTest.java  ConfigServiceTest.java
examples/simple-java-project/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  bazel-bin  bazel-out  bazel-simple-java-project  bazel-testlogs
examples/simple-java-project/app/: BUILD.bazel
examples/simple-java-project/app/src/main/java/com/example/app/: Main.java
examples/simple-java-project/greeter/: BUILD.bazel
examples/simple-java-project/greeter/src/main/java/com/example/greeter/: Greeter.java
examples/simple-java-project/tests/: BUILD.bazel
examples/simple-java-project/tests/src/test/java/com/example/greeter/: GreeterTest.java
