load("@rules_java//java:defs.bzl", "java_binary")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "application",
    srcs = ["src/main/java/com/example/app/Application.java"],
    deps = [
        "//service:user_service",
        "//utils:string_utils",
    ],
    main_class = "com.example.app.Application",
)
